cmake_minimum_required(VERSION 3.15)
#SET (CMAKE_CXX_COMPILER "/usr/bin/clang++" CACHE STRING "C++ compiler" FORCE)
SET (CMAKE_CXX_COMPILER "/usr/bin/g++" CACHE STRING "C++ compiler" FORCE)
project( pfctl-example )
set(CMAKE_CXX_STANDARD 14)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set (CMAKE_CXX_FLAGS "-O2 -g")
include_directories(${CMAKE_SOURCE_DIR})
add_executable( pfctl-example pfctl-example.cpp CPFCtl.cpp)
find_package(OpenSSL REQUIRED)
target_link_libraries(pfctl-example)
add_custom_target(run)
add_custom_command( TARGET run
	POST_BUILD COMMAND ./pfctl-example)
